<resources>
    <string name="app_name">GYK_01</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="signIn">Sign In</string>
    <string name="followersNum">Followers Number : </string>
    <string name="askAcc">Don\'t you have a account yet? </string>
    <string name="signUp">Sign Up!</string>
    <string name="help">Help</string>
    <string name="user">User : </string>
    <string name="sinceWhen">You have been friends for </string>
    <string-array name="imageArray"></string-array>

</resources>
