<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/coolColor"
    >

    <ImageView
        android:id="@+id/profilePic"
        android:background="@drawable/ps_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/userName"
        android:hint="@string/userName"
        android:textColor="@color/colorBlack"
        android:backgroundTint="@color/colorBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profilePic"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:textColor="@color/colorBlack"
        android:backgroundTint="@color/colorBlack"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
    <Button
        android:id="@+id/signInButton"
        android:text="@string/signIn"
        android:textColor="@color/colorWhite"
        android:background="@drawable/rounded_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/askAcc"
        android:text="@string/askAcc"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signInButton"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/signUp"
        android:text="@string/signUp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/colorBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/askAcc"
        android:layout_marginTop="5dp"
        />
    <ImageButton
        android:id="@+id/helpButton"
        android:background="@drawable/ic_help_black_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:id="@+id/helpText"
        android:text="@string/help"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_toEndOf="@+id/helpButton"
        />

</RelativeLayout>